feat: add Swagge POST. SWAGGER Veryphy
